# Voice-Ai-avatar

backend/: Cargo.toml  Dockerfile  render.yaml
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json
frontend/app/: page.tsx
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Avatar.tsx
frontend/src/types/: react-live2d.d.ts
