[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["headers", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.3", features = ["cors"] }
dotenv = "0.15"
base64 = "0.21"